Fix too long select fields

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -51,6 +51,7 @@ $inputHeight: 16px;
     height: 34px;
     margin-top: $inputHeight / 2;
     max-width: 100%;
+    width: 100%;
     -webkit-appearance: menulist-button;
   }
 
